fixed issue with pop. description covering footer

--- a/style.css
+++ b/style.css
@@ -95,3 +95,7 @@ hr {
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
+
+#trendingDiv {
+  height: auto;
+}
